--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
       "func-names": "off",
       "no-process-exit": "off",
       "object-shorthand": "off",
-      "class-methods-use-this": "off"
+      "class-methods-use-this": "off",
+      "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
     },
     "env": {
       "browser": true
